Project

General

Profile

Actions

Bug #15469

closed

[rgw multisite] - periods are listed even after removing them

Added by Kumar Hemanth about 8 years ago. Updated almost 8 years ago.

Status:
Resolved
Priority:
High
Assignee:
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Description of problem:
Was trying to clean-up the A/A multisite configuration and noticed that the periods are still listed even after removing them and they doesn't exist.

Version-Release number of selected component (if applicable):
ceph-radosgw-10.1.1-1.el7cp.x86_64

How reproducible:
100%

Steps to Reproduce:
1. Create an Active-Active multisite configuration using ceph 10.1.0( sync was not happening)
2. Upgraded the cluster from ceph-10.1.0 to ceph-10.1.1
3. Restarted the radosgw service
4. Tried to clean-up and re-configure the A/A multisite setup
5. Deleted periods from the list
6. list the period - all the deleted periods are still seen

Actual results:

Deleted periods are still seen

  1. radosgw-admin period list {
    "periods": [
    "98c35755-8819-4307-8a63-43c043e7cf78",
    "8646a28e-c6db-480c-b033-fd3ca3070eca",
    "8129c034-bd29-4392-9da7-dbc2936e50d7",
    "8a3393c4-198f-4be5-ac66-48fc2d4c6abf",
    "9a897f39-793a-44db-9b90-478dd9b66182:staging",
    "8a3393c4-198f-4be5-ac66-48fc2d4c6abf",
    "fa6be182-525c-40e6-8484-1afed452d9c5:staging",
    "9a897f39-793a-44db-9b90-478dd9b66182:staging",
    "8646a28e-c6db-480c-b033-fd3ca3070eca",
    "8a3393c4-198f-4be5-ac66-48fc2d4c6abf",
    "8129c034-bd29-4392-9da7-dbc2936e50d7",
    "8646a28e-c6db-480c-b033-fd3ca3070eca"
    ]
    }
  1. radosgw-admin period delete --period=98c35755-8819-4307-8a63-43c043e7cf78
    period.init failed: (2) No such file or directory
    2016-04-12 10:31:28.627403 7f86d101ca40 0 failed reading obj info from .rgw.root:periods.98c35755-8819-4307-8a63-43c043e7cf78.1: (2) No such file or directory
  2. radosgw-admin period delete --period=8646a28e-c6db-480c-b033-fd3ca3070eca
  3. radosgw-admin period delete --period=8129c034-bd29-4392-9da7-dbc2936e50d7
  4. radosgw-admin period delete --period=8a3393c4-198f-4be5-ac66-48fc2d4c6abf
  5. radosgw-admin period delete --period=8a3393c4-198f-4be5-ac66-48fc2d4c6abf
    period.init failed: (2) No such file or directory
    2016-04-12 10:31:59.781759 7f7ebdb2da40 0 failed reading obj info from .rgw.root:periods.8a3393c4-198f-4be5-ac66-48fc2d4c6abf.2: (2) No such file or directory
  6. radosgw-admin period delete --period=8646a28e-c6db-480c-b033-fd3ca3070eca
    period.init failed: (2) No such file or directory
    2016-04-12 10:32:06.781048 7f46ed96ea40 0 failed reading obj info from .rgw.root:periods.8646a28e-c6db-480c-b033-fd3ca3070eca.2: (2) No such file or directory
  7. radosgw-admin period delete --period=8a3393c4-198f-4be5-ac66-48fc2d4c6abf
    period.init failed: (2) No such file or directory
    2016-04-12 10:32:13.022304 7f7419045a40 0 failed reading obj info from .rgw.root:periods.8a3393c4-198f-4be5-ac66-48fc2d4c6abf.2: (2) No such file or directory
  8. radosgw-admin period delete --period=8129c034-bd29-4392-9da7-dbc2936e50d7
    period.init failed: (2) No such file or directory
    2016-04-12 10:32:20.401966 7fc337352a40 0 failed reading obj info from .rgw.root:periods.8129c034-bd29-4392-9da7-dbc2936e50d7.1: (2) No such file or directory
  9. radosgw-admin period delete --period=8646a28e-c6db-480c-b033-fd3ca3070eca
    period.init failed: (2) No such file or directory
    2016-04-12 10:32:26.676547 7f41ffcc1a40 0 failed reading obj info from .rgw.root:periods.8646a28e-c6db-480c-b033-fd3ca3070eca.2: (2) No such file or directory

same behavior is seen on secondary zone also..

Expected results:

Clean up or un-configuration of multisite should happen gracefully

Additional info:


Related issues 1 (0 open1 closed)

Copied to rgw - Backport #15834: jewel: [rgw multisite] - periods are listed even after removing themResolvedYehuda SadehActions
Actions #1

Updated by Orit Wasserman about 8 years ago

  • Assignee set to Casey Bodley
Actions #2

Updated by Matt Benjamin about 8 years ago

  • Status changed from New to In Progress
Actions #3

Updated by Yehuda Sadeh almost 8 years ago

  • Status changed from In Progress to Pending Backport
Actions #4

Updated by Nathan Cutler almost 8 years ago

  • Backport set to jewel
Actions #5

Updated by Nathan Cutler almost 8 years ago

  • Copied to Backport #15834: jewel: [rgw multisite] - periods are listed even after removing them added
Actions #6

Updated by Loïc Dachary almost 8 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF