rgw: 'period delete' cleans up all period objects

Fixes: http://tracker.ceph.com/issues/15469

Signed-off-by: Casey Bodley <cbodley@redhat.com>